Fix spacing between subfigures

--- a/src/scripts/modules/media/body/body.less
+++ b/src/scripts/modules/media/body/body.less
@@ -46,6 +46,7 @@
 
   figure {
     display: table;
+    table-layout: fixed;
     width: 100%;
     color: @gray;
     counter-increment: figure;
